<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/buttonTechLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/way_to_get_into_tech" />

    <Button
        android:id="@+id/buttonAuthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_33_33_34_budget" />

    <!-- My Dream Life Button -->
    <Button
        android:id="@+id/buttonMyDreamLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_dream_life" />


</LinearLayout>
